--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Imports: stringr,
     plyr,
     lubridate
 RoxygenNote: 6.0.1
+URL: https://github.com/hxfan1227/efdcr
+BugReports: https://github.com/hxfan1227/efdcr/issues
