update geom_velocity and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,14 @@ export(cal_poly_area)
 export(col_format_water_level)
 export(dt_to_wq)
 export(format_rfggrid)
+export(geom_velocity)
 export(shp_to_ldb)
 export(tidy_water_level)
 import(XLConnect)
 import(XLConnectJars)
 import(data.table)
+import(ggplot2)
+import(grid)
 import(plyr)
 importFrom(lubridate,ymd)
 importFrom(stringr,str_detect)
