--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,5 @@ import(plyr)
 importFrom(lubridate,ymd)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
+importFrom(stringr,str_split_fixed)
+importFrom(utils,write.table)
