add efdc_nc_get_grid function and update docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,15 @@ import(XLConnectJars)
 import(data.table)
 import(ggplot2)
 import(grid)
+import(ncdf4)
 import(plyr)
 importFrom(data.table,":=")
+importFrom(data.table,melt)
+importFrom(data.table,setDT)
 importFrom(lubridate,ddays)
 importFrom(lubridate,ymd)
+importFrom(ncdf4,nc_open)
+importFrom(ncdf4,ncvar_get)
 importFrom(plyr,rbind.fill)
 importFrom(readr,read_lines)
 importFrom(stringr,str_detect)
