--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Imports:
     XLConnect,
     XLConnectJars,
     ggplot2,
-    readr
-RoxygenNote: 6.1.0
+    readr,
+    ncdf4
+RoxygenNote: 6.1.1
 URL: https://github.com/hxfan1227/efdcr
 BugReports: https://github.com/hxfan1227/efdcr/issues
