add has_variable and update efdc_nc_get_grid_dt

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(dt_to_wq)
 export(efdc_nc_get_grid_dt)
 export(format_rfggrid)
 export(geom_velocity)
+export(has_variable)
 export(nse)
 export(poly_area)
 export(shp_to_ldb)
