--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,12 +17,14 @@ import(XLConnectJars)
 import(data.table)
 import(ggplot2)
 import(grid)
+import(hydroGOF)
 import(ncdf4)
 import(plyr)
 importFrom(data.table,":=")
 importFrom(data.table,melt)
 importFrom(data.table,setDT)
 importFrom(ggplot2,"%+replace%")
+importFrom(hydroGOF,gof)
 importFrom(lubridate,ddays)
 importFrom(lubridate,ymd)
 importFrom(ncdf4,nc_open)
