--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Imports:
     XLConnectJars,
     ggplot2,
     readr,
-    ncdf4
+    ncdf4,
+    hydroGOF
 RoxygenNote: 6.1.1
 URL: https://github.com/hxfan1227/efdcr
 BugReports: https://github.com/hxfan1227/efdcr/issues
