re-code get_efdc_nc_dt()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(col_format_water_level)
 export(dt_to_wq)
 export(format_rfggrid)
 export(geom_velocity)
+export(get_efdc_nc_coordinates)
 export(get_efdc_nc_dt)
+export(get_efdc_nc_var)
 export(has_variable)
 export(nse)
 export(plot_efdc_ts)
