--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     ggplot2,
     readr,
     ncdf4,
-    hydroGOF
+    hydroGOF,
+    reshape2
 RoxygenNote: 6.1.1
 URL: https://github.com/hxfan1227/efdcr
 BugReports: https://github.com/hxfan1227/efdcr/issues
