--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,14 +8,16 @@ export(get_efdc_nc_coordinates)
 export(get_efdc_nc_dt)
 export(get_efdc_nc_var)
 export(has_variable)
+export(melt_nc)
 export(nse)
 export(plot_efdc_ts)
 export(poly_area)
+export(set_wqbc)
 export(shp_to_ldb)
 export(theme_efdc)
 export(tidy_water_level)
+export(write_wq)
 import(XLConnect)
-import(XLConnectJars)
 import(data.table)
 import(ggplot2)
 import(grid)
@@ -25,17 +27,23 @@ import(plyr)
 importFrom(data.table,":=")
 importFrom(data.table,melt)
 importFrom(data.table,setDT)
+importFrom(dplyr,as.tbl_cube)
+importFrom(dplyr,as_tibble)
 importFrom(ggplot2,"%+replace%")
 importFrom(hydroGOF,gof)
 importFrom(lubridate,ddays)
 importFrom(lubridate,ymd)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncvar_get)
+importFrom(plyr,alply)
 importFrom(plyr,rbind.fill)
+importFrom(purrr,map)
+importFrom(purrr,safely)
 importFrom(readr,read_lines)
 importFrom(stats,na.omit)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_split_fixed)
+importFrom(stringr,str_sub)
 importFrom(utils,write.table)
