--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
-pandoc: 1.19.2.1
-pkgdown: 1.4.1
+pandoc: 2.7.2
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   efdcr_intro: efdcr_intro.html
+last_built: 2020-04-26T07:28Z
 
