--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,6 @@ pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   efdcr_intro: efdcr_intro.html
-last_built: 2020-04-26T07:28Z
+  pre_process: pre_process.html
+last_built: 2020-04-27T08:11Z
 
