--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,10 +3,9 @@ pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   efdcr_intro: efdcr_intro.html
-<<<<<<< HEAD
-last_built: 2020-04-28T02:21Z
-=======
   pre_process: pre_process.html
-last_built: 2020-04-27T08:11Z
->>>>>>> 16a744b42a26afb587161ca204bdf20ae3db8082
+last_built: 2020-04-28T02:49Z
+urls:
+  reference: https://hxfan1227.github.io/efdcr/reference
+  article: https://hxfan1227.github.io/efdcr/articles
 
