--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,6 +12,7 @@ authors:
 
 development:
   mode: auto
-  destination: dev
   version_label: danger
   version_tooltip: "In-development version"
+  
+destination: docs
