--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ importFrom(ncdf4,ncvar_get)
 importFrom(plyr,alply)
 importFrom(plyr,rbind.fill)
 importFrom(purrr,map)
+importFrom(purrr,map_int)
 importFrom(purrr,safely)
 importFrom(readr,read_lines)
 importFrom(stats,na.omit)
