Use Google Analytics

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -5,6 +5,7 @@ url: https://hxfan1227.github.io/efdcr
 template:
   params:
     bootswatch: flatly
+    ganalytics: UA-164813355-1
 
 authors:
   Christoph Schürz:
