--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,14 +18,15 @@ Imports:
     data.table,
     plyr,
     lubridate,
-    XLConnect,
     ggplot2,
     readr,
     ncdf4,
     hydroGOF,
     reshape2,
     purrr,
-    lifecycle
+    lifecycle,
+    cubelyr,
+    tibble
 RoxygenNote: 7.1.0
 URL: https://github.com/hxfan1227/efdcr
 BugReports: https://github.com/hxfan1227/efdcr/issues
@@ -34,5 +35,6 @@ Suggests:
     rmarkdown
 VignetteBuilder: knitr
 Depends: 
-    R (>= 2.10)
+    R (>= 2.10),
+    tidyverse
 RdMacros: lifecycle
