--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,11 +21,10 @@ import(grid)
 import(hydroGOF)
 import(ncdf4)
 import(plyr)
+importFrom(cubelyr,as.tbl_cube)
 importFrom(data.table,":=")
 importFrom(data.table,melt)
 importFrom(data.table,setDT)
-importFrom(dplyr,as.tbl_cube)
-importFrom(dplyr,as_tibble)
 importFrom(ggplot2,"%+replace%")
 importFrom(hydroGOF,gof)
 importFrom(lubridate,ddays)
@@ -43,4 +42,5 @@ importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_split_fixed)
 importFrom(stringr,str_sub)
+importFrom(tibble,as_tibble)
 importFrom(utils,write.table)
