--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(geom_velocity)
 export(get_efdc_nc_coordinates)
 export(get_efdc_nc_dt)
 export(get_efdc_nc_var)
+export(get_wq_params)
+export(get_wq_params_value)
 export(has_variable)
 export(melt_nc)
 export(nse)
@@ -14,6 +16,7 @@ export(poly_area)
 export(set_wqbc)
 export(shp_to_ldb)
 export(theme_efdc)
+export(update_wq_params_value)
 export(write_wq)
 import(data.table)
 import(ggplot2)
@@ -21,6 +24,7 @@ import(grid)
 import(hydroGOF)
 import(ncdf4)
 import(plyr)
+import(stringr)
 importFrom(cubelyr,as.tbl_cube)
 importFrom(data.table,":=")
 importFrom(data.table,melt)
@@ -38,6 +42,7 @@ importFrom(purrr,map_int)
 importFrom(purrr,safely)
 importFrom(readr,read_lines)
 importFrom(stats,na.omit)
+importFrom(stringr,"%>%")
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_split_fixed)
