--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
     purrr,
     lifecycle,
     cubelyr,
-    tibble
+    tibble,
+    magrittr
 RoxygenNote: 7.1.0
 URL: https://github.com/hxfan1227/efdcr
 BugReports: https://github.com/hxfan1227/efdcr/issues
@@ -35,6 +36,5 @@ Suggests:
     rmarkdown
 VignetteBuilder: knitr
 Depends: 
-    R (>= 2.10),
-    tidyverse
+    R (>= 2.10)
 RdMacros: lifecycle
