--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: efdcr
 Type: Package
-Title: Environmental Fluid Dynamics Code (EFDC) Toolbox in R
+Title: Environmental Fluid Dynamics Code Toolbox
 Version: 0.4.1
 Authors@R: person("Hongxiang", "Fan",
                 email = "hxfan@niglas.ac.cn",
                 role = c("aut", "cre"),
                 comment = c(ORCID = '0000-0001-7626-1344'))
 Maintainer: Hongxiang Fan <hxfan@niglas.ac.cn>
-Description: efdcr provides useful tools for data preparation for Environmental Fluid Dynamics Code (EFDC) .
+Description: Tools to link existing Environmental Fluid Dynamics Code (EFDC) models with your modelling workflows in R. efdcr enables you to set up the model data before you can directly import to the EFDC and to easily visualize the model results exported by EFDC.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
