--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,6 @@ LazyData: true
 Imports:
     stringr,
     broom,
-    raster,
     data.table,
     plyr,
     lubridate,
@@ -36,7 +35,8 @@ Imports:
     lifecycle,
     cubelyr,
     tibble,
-    magrittr
+    magrittr,
+    raster
 RoxygenNote: 7.1.1
 URL: https://github.com/hxfan1227/efdcr
 BugReports: https://github.com/hxfan1227/efdcr/issues
