--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ import(hydroGOF)
 import(ncdf4)
 import(plyr)
 import(stringr)
+importFrom(broom,tidy)
 importFrom(cubelyr,as.tbl_cube)
 importFrom(data.table,":=")
 importFrom(data.table,melt)
@@ -43,6 +44,7 @@ importFrom(plyr,rbind.fill)
 importFrom(purrr,map)
 importFrom(purrr,map_int)
 importFrom(purrr,safely)
+importFrom(raster,shapefile)
 importFrom(readr,read_lines)
 importFrom(stats,na.omit)
 importFrom(stringr,str_extract_all)
