--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R: c(
          role = c('ctb'))
   )
 Maintainer: Hongxiang Fan <hxfan@niglas.ac.cn>
-Description: Tools to link existing Environmental Fluid Dynamics Code (EFDC) models with your modelling workflows in R. efdcr enables you to set up the model data before you can directly import to the EFDC and to easily visualize the model results exported by EFDC.
+Description: Tools to link existing Environmental Fluid Dynamics Code ('EFDC') models with your modelling workflows in R. 'efdcr' enables you to set up the model data before you can directly import to the 'EFDC' and to easily visualize the model results exported by 'EFDC'.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
