--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(get_wq_params_value)
 export(has_variable)
 export(melt_nc)
 export(nse)
+export(plot_efdc_nc_var)
 export(plot_efdc_ts)
 export(poly_area)
 export(set_wqbc)
