--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(dt_to_wq)
 export(format_rfggrid)
 export(generate_wq_abb)
 export(geom_velocity)
+export(get_efdc_grids_as_sf)
 export(get_efdc_nc_coordinates)
 export(get_efdc_nc_dt)
 export(get_efdc_nc_var)
@@ -23,10 +24,12 @@ export(update_wq_params_value)
 export(write_wq)
 import(data.table)
 import(ggplot2)
+import(glue)
 import(grid)
 import(hydroGOF)
 import(ncdf4)
 import(plyr)
+import(sf)
 import(stringr)
 importFrom(broom,tidy)
 importFrom(cubelyr,as.tbl_cube)
@@ -38,6 +41,7 @@ importFrom(hydroGOF,gof)
 importFrom(lubridate,ddays)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,`%>%`)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncvar_get)
 importFrom(plyr,alply)
