--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ importFrom(cubelyr,as.tbl_cube)
 importFrom(data.table,":=")
 importFrom(data.table,melt)
 importFrom(data.table,setDT)
+importFrom(dplyr,group_by)
+importFrom(dplyr,summarise)
 importFrom(ggplot2,"%+replace%")
 importFrom(hydroGOF,gof)
 importFrom(lubridate,ddays)
