--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,10 @@ Imports:
     cubelyr,
     tibble,
     magrittr,
-    raster
+    raster,
+    dplyr,
+    glue,
+    sf
 RoxygenNote: 7.2.0
 URL: https://github.com/hxfan1227/efdcr
 BugReports: https://github.com/hxfan1227/efdcr/issues
