--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,6 @@ import(glue)
 import(grid)
 import(hydroGOF)
 import(ncdf4)
-import(plyr)
 import(sf)
 import(stringr)
 importFrom(broom,tidy)
@@ -46,6 +45,7 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,`%>%`)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncvar_get)
+importFrom(plyr,a_ply)
 importFrom(plyr,alply)
 importFrom(plyr,rbind.fill)
 importFrom(purrr,map)
