update efdcr to support 10.1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(purrr,map_int)
 importFrom(purrr,safely)
 importFrom(raster,shapefile)
 importFrom(readr,read_lines)
+importFrom(rlang,sym)
 importFrom(stats,na.omit)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
