--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Imports:
     raster,
     dplyr,
     glue,
-    sf
+    sf,
+    rlang
 RoxygenNote: 7.2.1
 URL: https://github.com/hxfan1227/efdcr
 BugReports: https://github.com/hxfan1227/efdcr/issues
